@@ -12,6 +12,8 @@ PHP                                                                        NEWS
 - Renamed SoapClient->__call() to SoapClinet->__soapCall(). (Dmitry)
 - Fixed bug with raw_post_data not getting set (Brian)
 - Fixed a file-descriptor leak with phpinfo() and other 'special' URLs (Zeev)
+- Fixed bug #30045 (Cannot pass big integers (> 2147483647) in SOAP requests).
+  (Dmitry)
 - Fixed bug #29985 (unserialize()/ __PHP_Incomplete_class does not report 
   correctly class name). (Marcus, Tony)
 - Fixed bug #29945 (simplexml_load_file URL limitation 255 char). (Rob)
